--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e09991d",
+   "id": "6081f2ea",
    "metadata": {},
    "source": [
     "## Data Cleaning"
@@ -299,7 +299,7 @@
     }
    ],
    "source": [
-    "# Get rid of unnecessary columns\n",
+    "# Get rid of unnecessary columns.\n",
     "df1 = df.drop(['area_type', 'availability', 'society', 'balcony'], axis=1)\n",
     "df1.head()"
    ]
@@ -327,7 +327,7 @@
     }
    ],
    "source": [
-    "# A count of the null data points in each column\n",
+    "# A count of the null data points in each column.\n",
     "df1.isnull().sum()"
    ]
   },
@@ -361,7 +361,7 @@
     }
    ],
    "source": [
-    "# Drop every row that has a null  data point\n",
+    "# Drop every row that has a null data point.\n",
     "df2 = df1.dropna()\n",
     "print(df2.shape)\n",
     "df2.isnull().sum()"
@@ -505,7 +505,7 @@
     }
    ],
    "source": [
-    "# We create a new column, that takes the number from size column, e.g '2 BHK' will be '2' in our new column.\n",
+    "# I'll create a new column, that takes the number from size column, e.g '2 BHK' will be '2' in our new column.\n",
     "df2['bhk'] = df2['size'].apply(lambda x: int(x.split(' ')[0]))\n",
     "df2.head()"
    ]
@@ -602,7 +602,7 @@
     }
    ],
    "source": [
-    "# The entries in the dataset where bhk is > 20\n",
+    "# The entries in the dataset where bhk is > 20.\n",
     "df2[df2.bhk>20]"
    ]
   },
@@ -807,7 +807,7 @@
     }
    ],
    "source": [
-    "# The entries in the dataset where the total_sqft is not a float; using the (~) \n",
+    "# The entries in the dataset where the total_sqft is not a float; using the (~).\n",
     "df2[~df2['total_sqft'].apply(convertToFloat)]"
    ]
   },
@@ -950,6 +950,7 @@
     }
    ],
    "source": [
+    "# I'll create a new dataframe and apply the above function to the total_sqft column.\n",
     "df3 = df2.copy()\n",
     "df3.total_sqft = df3.total_sqft.apply(convertRangeToFloat)\n",
     "df3.head()"
@@ -979,7 +980,7 @@
     }
    ],
    "source": [
-    "# Entries in the 30th index\n",
+    "# Entries in the 30th index.\n",
     "df3.loc[30]"
    ]
   },
@@ -1221,7 +1222,7 @@
     }
    ],
    "source": [
-    "# A new column 'price per sqft'; the quotient of price/total_sqft\n",
+    "# A new column 'price per sqft'; the quotient of price/total_sqft.\n",
     "df4 = df3.copy()\n",
     "df4['price_per_sqft'] = df4['price']*100000/df4['total_sqft'] # I multiply the price by 100000; 1 lakh = 100000\n",
     "df4.head()"
@@ -1245,7 +1246,7 @@
     }
    ],
    "source": [
-    "# Number of unique locations in the dataset\n",
+    "# Number of unique locations in the dataset.\n",
     "len(df4.location.unique())"
    ]
   },
@@ -1298,7 +1299,7 @@
     }
    ],
    "source": [
-    "# Number of houses in each location\n",
+    "# Number of houses in each location.\n",
     "df4.location = df4.location.apply(lambda x: x.strip())\n",
     "\n",
     "location_stats = df4.groupby('location')['location'].agg('count').sort_values(ascending=False)\n",
@@ -1379,7 +1380,7 @@
     }
    ],
    "source": [
-    "# I'm creating a new location variable 'other', for all the locations that have less than 10 houses\n",
+    "# I'm creating a new location variable \"other\", for all the locations that have less than 10 houses.\n",
     "df4.location = df4.location.apply(lambda x: 'other' if x in minor_locations else x)\n",
     "len(df4.location.unique())"
    ]
@@ -1673,7 +1674,7 @@
     }
    ],
    "source": [
-    "# The entries in the dataset where the quotient of the total_sqft/bhk < 300\n",
+    "# The entries in the dataset where the quotient of the total_sqft/bhk < 300.\n",
     "df4[df4.total_sqft/df4.bhk<300].head()"
    ]
   },
@@ -1700,7 +1701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aec8e1f",
+   "id": "97d478d7",
    "metadata": {},
    "source": [
     "## Outlier filtering"
@@ -1724,7 +1725,7 @@
     }
    ],
    "source": [
-    "# I create a new dataframe where I filter entries that have a total_sqft/bhk < 300 \n",
+    "# I create a new dataframe where I filter entries that have a (total_sqft/bhk) < 300 .\n",
     "df5 = df4[~(df4.total_sqft/df4.bhk<300)]\n",
     "df5.shape"
    ]
@@ -1766,6 +1767,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# I'll create a function that filters out overly expensive and overly cheap houses.\n",
     "def filter_outliers1(dataframe):\n",
     "    ''' \n",
     "        This function takes the dataframe, and groupby the location.\n",
@@ -1841,7 +1843,7 @@
     }
    ],
    "source": [
-    "# Number of house in each bhk size\n",
+    "# Number of house in each bhk size.\n",
     "df6.groupby('bhk')['bhk'].agg('count')"
    ]
   },
@@ -1881,11 +1883,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc7800bf",
+   "id": "73eced09",
    "metadata": {},
    "source": [
     "See how some 3 bhk houses cost less than 2 bhk houses with the same total square feet area.<br>\n",
-    "Normally you'll think that for more bhk the price of a given house with the same sqft should go higher<br>\n",
+    "Normally you'll think that for more bhk the price of a given house with the same sqft should go higher.<br>\n",
     "<br>\n",
     "So I'll go ahead and write a function that filters these outliers."
    ]
@@ -1995,7 +1997,7 @@
     }
    ],
    "source": [
-    "# I can now use a histogram to see the distribution of my data\n",
+    "# I can now use a histogram to see the distribution of my data.\n",
     "matplotlib.rcParams['figure.figsize'] = (15, 5)\n",
     "plt.hist(df7.price_per_sqft, rwidth=.7)\n",
     "plt.xlabel('Price per square feet')\n",
@@ -2004,7 +2006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90569a37",
+   "id": "12e5f815",
    "metadata": {},
    "source": [
     "It seems to have a sort of bell curve shape."
@@ -2028,7 +2030,7 @@
     }
    ],
    "source": [
-    "# Lets see the bath columns, there might need to be some cleaning there\n",
+    "# Lets see the bath columns, there might need to be some cleaning there.\n",
     "df7.bath.unique()"
    ]
   },
@@ -2138,7 +2140,7 @@
     }
    ],
    "source": [
-    "# The entries in the dataset where bath is number of bath is greater than 10\n",
+    "# The entries in the dataset where bath is number of bath is greater than 10.\n",
     "df7[df7.bath>10]"
    ]
   },
@@ -2172,7 +2174,7 @@
     }
    ],
    "source": [
-    "# I'll use a histogtram to see the most common number of bathrooms in the dataset\n",
+    "# I'll use a histogtram to see the most common number of bathrooms in the dataset.\n",
     "plt.hist(df7.bath, rwidth=.7)\n",
     "plt.xlabel('Number of bathrooms')\n",
     "plt.ylabel('Counts')"
@@ -2274,7 +2276,7 @@
    ],
    "source": [
     "# Now there are some house that have an absurd number of bathrooms,\n",
-    "# Entries in the dataset where the number of bathrooms is more than the bhk+2\n",
+    "# Entries in the dataset where the number of bathrooms is more than the bhk+2.\n",
     "df7[df7.bath>df7.bhk+2]"
    ]
   },
@@ -2402,7 +2404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c06a27e",
+   "id": "afc248c4",
    "metadata": {},
    "source": [
     "There are over 200 locations in the dataset, and they are all string data type.<br>\n",
@@ -2865,7 +2867,7 @@
     }
    ],
    "source": [
-    "# We concatenate our dummies-dataframe to out main dataframe\n",
+    "# We concatenate our dummies-dataframe to out main dataframe.\n",
     "df10 = pd.concat([df9, dummies.drop('other', axis=1)], axis=1)\n",
     "df10.head()"
    ]
@@ -3774,7 +3776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c0e99a1",
+   "id": "89d8707f",
    "metadata": {},
    "outputs": [],
    "source": []
