--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "244ae12c",
+   "id": "e6d501a9",
    "metadata": {},
    "source": [
     "## Data Cleaning"
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae31808a",
+   "id": "91ea1ee9",
    "metadata": {},
    "source": [
     "## Outlier filtering"
@@ -1883,7 +1883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f04b3c77",
+   "id": "091b4479",
    "metadata": {},
    "source": [
     "See how some 3 bhk houses cost less than 2 bhk houses with the same total square feet area.<br>\n",
@@ -2006,7 +2006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67881244",
+   "id": "b1c82567",
    "metadata": {},
    "source": [
     "It seems to have a sort of bell curve shape."
@@ -2404,7 +2404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29716877",
+   "id": "f5d3ee77",
    "metadata": {},
    "source": [
     "There are over 200 locations in the dataset, and they are all string data type.<br>\n",
@@ -2874,7 +2874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "553ad17e",
+   "id": "6a0fd293",
    "metadata": {},
    "source": [
     "I dropped the 'other' column to prevent the dummy variable trap. <br>\n",
@@ -3696,7 +3696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d7fbead",
+   "id": "c08ea1b0",
    "metadata": {},
    "source": [
     "Clearly, houses appear to be more expensive in some locations and cheaper in some too. <br>\n",
@@ -3718,7 +3718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 254,
    "id": "a78471e5",
    "metadata": {},
    "outputs": [],
@@ -3730,6 +3730,16 @@
     "}\n",
     "with open('coulmns.json', 'w') as f:\n",
     "    f.write(json.dumps(columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1c87c49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ifunanyaScript"
    ]
   }
  ],
