--- a/jupyter_notebook/notebook.ipynb
+++ b/jupyter_notebook/notebook.ipynb
@@ -152,7 +152,7 @@
    ],
    "source": [
     "# Load the data into a pandas dataframe.\n",
-    "df = pd.read_csv(r\"C:\\Users\\USER\\Everything\\House_price_prediction_repository\\Bengaluru_House_Data.csv\")\n",
+    "df = pd.read_csv(r\"C:\\Users\\ifunanyaScript\\Everything\\House_price_prediction_repository\\Bengaluru_House_Data.csv\")\n",
     "df.head()"
    ]
   },
@@ -3745,7 +3745,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3759,7 +3759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
