--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Data Cleaning\n",
     "As we all know when data is collected, it most likely comes in an unordered manner. With inconsistency and incompleteness.  \n",
-    "So, it is our job to address this data and process optimally so it could be used as information for insightful analysis or to train a model. "
+    "So, it is our job to address this data and process it optimally, so it could be used as information for insightful analysis or to train a model. "
    ]
   },
   {
@@ -15,9 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import packages we need for data exploration.\n",
+    "# Import package(s) for data exploration.\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "# Ignoring all unnecessary warnings.\n",
     "pd.set_option('mode.chained_assignment', None)"
@@ -1186,8 +1185,18 @@
      "shell.execute_reply": "2022-06-30T15:32:12.643157Z",
      "shell.execute_reply.started": "2022-06-30T15:32:12.618175Z"
     },
-    "scrolled": true
+    "scrolled": false
    },
+   "outputs": [],
+   "source": [
+    "# New column that takes the number from size column, e.g '2 BHK' will be '2' in the new column.\n",
+    "df2['bedrooms'] = df2['size'].apply(lambda x: int(x.split(' ')[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1211,7 +1220,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>location</th>\n",
-       "      <th>size</th>\n",
        "      <th>total_sqft</th>\n",
        "      <th>bath</th>\n",
        "      <th>price</th>\n",
@@ -1222,7 +1230,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Electronic City Phase II</td>\n",
-       "      <td>2 BHK</td>\n",
        "      <td>1056</td>\n",
        "      <td>2.0</td>\n",
        "      <td>39.07</td>\n",
@@ -1231,7 +1238,6 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Chikka Tirupathi</td>\n",
-       "      <td>4 Bedroom</td>\n",
        "      <td>2600</td>\n",
        "      <td>5.0</td>\n",
        "      <td>120.00</td>\n",
@@ -1240,7 +1246,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Uttarahalli</td>\n",
-       "      <td>3 BHK</td>\n",
        "      <td>1440</td>\n",
        "      <td>2.0</td>\n",
        "      <td>62.00</td>\n",
@@ -1249,7 +1254,6 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Lingadheeranahalli</td>\n",
-       "      <td>3 BHK</td>\n",
        "      <td>1521</td>\n",
        "      <td>3.0</td>\n",
        "      <td>95.00</td>\n",
@@ -1258,7 +1262,6 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Kothanur</td>\n",
-       "      <td>2 BHK</td>\n",
        "      <td>1200</td>\n",
        "      <td>2.0</td>\n",
        "      <td>51.00</td>\n",
@@ -1269,22 +1272,21 @@
        "</div>"
       ],
       "text/plain": [
-       "                   location       size total_sqft  bath   price  bedrooms\n",
-       "0  Electronic City Phase II      2 BHK       1056   2.0   39.07         2\n",
-       "1          Chikka Tirupathi  4 Bedroom       2600   5.0  120.00         4\n",
-       "2               Uttarahalli      3 BHK       1440   2.0   62.00         3\n",
-       "3        Lingadheeranahalli      3 BHK       1521   3.0   95.00         3\n",
-       "4                  Kothanur      2 BHK       1200   2.0   51.00         2"
+       "                   location total_sqft  bath   price  bedrooms\n",
+       "0  Electronic City Phase II       1056   2.0   39.07         2\n",
+       "1          Chikka Tirupathi       2600   5.0  120.00         4\n",
+       "2               Uttarahalli       1440   2.0   62.00         3\n",
+       "3        Lingadheeranahalli       1521   3.0   95.00         3\n",
+       "4                  Kothanur       1200   2.0   51.00         2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# New column that takes the number from size column, e.g '2 BHK' will be '2' in the new column.\n",
-    "df2['bedrooms'] = df2['size'].apply(lambda x: int(x.split(' ')[0]))\n",
+    "df2 = df2.drop(['size'], axis=1)\n",
     "df2.head()"
    ]
   },
@@ -1298,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-06-30T15:32:13.811560Z",
@@ -1317,7 +1319,7 @@
        "       13, 18], dtype=int64)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-06-30T15:32:15.120262Z",
@@ -1369,7 +1371,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>location</th>\n",
-       "      <th>size</th>\n",
        "      <th>total_sqft</th>\n",
        "      <th>bath</th>\n",
        "      <th>price</th>\n",
@@ -1380,7 +1381,6 @@
        "    <tr>\n",
        "      <th>1718</th>\n",
        "      <td>2Electronic City Phase II</td>\n",
-       "      <td>27 BHK</td>\n",
        "      <td>8000</td>\n",
        "      <td>27.0</td>\n",
        "      <td>230.0</td>\n",
@@ -1389,7 +1389,6 @@
        "    <tr>\n",
        "      <th>3379</th>\n",
        "      <td>1Hanuman Nagar</td>\n",
-       "      <td>19 BHK</td>\n",
        "      <td>2000</td>\n",
        "      <td>16.0</td>\n",
        "      <td>490.0</td>\n",
@@ -1398,7 +1397,6 @@
        "    <tr>\n",
        "      <th>3609</th>\n",
        "      <td>Koramangala Industrial Layout</td>\n",
-       "      <td>16 BHK</td>\n",
        "      <td>10000</td>\n",
        "      <td>16.0</td>\n",
        "      <td>550.0</td>\n",
@@ -1407,7 +1405,6 @@
        "    <tr>\n",
        "      <th>4684</th>\n",
        "      <td>Munnekollal</td>\n",
-       "      <td>43 Bedroom</td>\n",
        "      <td>2400</td>\n",
        "      <td>40.0</td>\n",
        "      <td>660.0</td>\n",
@@ -1416,7 +1413,6 @@
        "    <tr>\n",
        "      <th>11559</th>\n",
        "      <td>1Kasavanhalli</td>\n",
-       "      <td>18 Bedroom</td>\n",
        "      <td>1200</td>\n",
        "      <td>18.0</td>\n",
        "      <td>200.0</td>\n",
@@ -1427,28 +1423,21 @@
        "</div>"
       ],
       "text/plain": [
-       "                            location        size total_sqft  bath  price  \\\n",
-       "1718       2Electronic City Phase II      27 BHK       8000  27.0  230.0   \n",
-       "3379                  1Hanuman Nagar      19 BHK       2000  16.0  490.0   \n",
-       "3609   Koramangala Industrial Layout      16 BHK      10000  16.0  550.0   \n",
-       "4684                     Munnekollal  43 Bedroom       2400  40.0  660.0   \n",
-       "11559                  1Kasavanhalli  18 Bedroom       1200  18.0  200.0   \n",
-       "\n",
-       "       bedrooms  \n",
-       "1718         27  \n",
-       "3379         19  \n",
-       "3609         16  \n",
-       "4684         43  \n",
-       "11559        18  "
+       "                            location total_sqft  bath  price  bedrooms\n",
+       "1718       2Electronic City Phase II       8000  27.0  230.0        27\n",
+       "3379                  1Hanuman Nagar       2000  16.0  490.0        19\n",
+       "3609   Koramangala Industrial Layout      10000  16.0  550.0        16\n",
+       "4684                     Munnekollal       2400  40.0  660.0        43\n",
+       "11559                  1Kasavanhalli       1200  18.0  200.0        18"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# The entries in the dataset where bhk is > 15.\n",
+    "# The entries in the dataset where bedrooms is > 15.\n",
     "df2[df2.bedrooms>15]"
    ]
   },
@@ -1462,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-06-30T15:32:17.691770Z",
@@ -1480,7 +1469,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-06-30T15:32:20.251524Z",
@@ -1523,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-06-30T15:32:21.603252Z",
@@ -1556,7 +1545,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>location</th>\n",
-       "      <th>size</th>\n",
        "      <th>total_sqft</th>\n",
        "      <th>bath</th>\n",
        "      <th>price</th>\n",
@@ -1567,7 +1555,6 @@
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>Yelahanka</td>\n",
-       "      <td>4 BHK</td>\n",
        "      <td>2100 - 2850</td>\n",
        "      <td>4.0</td>\n",
        "      <td>186.000</td>\n",
@@ -1576,7 +1563,6 @@
        "    <tr>\n",
        "      <th>122</th>\n",
        "      <td>Hebbal</td>\n",
-       "      <td>4 BHK</td>\n",
        "      <td>3067 - 8156</td>\n",
        "      <td>4.0</td>\n",
        "      <td>477.000</td>\n",
@@ -1585,7 +1571,6 @@
        "    <tr>\n",
        "      <th>137</th>\n",
        "      <td>8th Phase JP Nagar</td>\n",
-       "      <td>2 BHK</td>\n",
        "      <td>1042 - 1105</td>\n",
        "      <td>2.0</td>\n",
        "      <td>54.005</td>\n",
@@ -1594,7 +1579,6 @@
        "    <tr>\n",
        "      <th>165</th>\n",
        "      <td>Sarjapur</td>\n",
-       "      <td>2 BHK</td>\n",
        "      <td>1145 - 1340</td>\n",
        "      <td>2.0</td>\n",
        "      <td>43.490</td>\n",
@@ -1603,7 +1587,6 @@
        "    <tr>\n",
        "      <th>188</th>\n",
        "      <td>KR Puram</td>\n",
-       "      <td>2 BHK</td>\n",
        "      <td>1015 - 1540</td>\n",
        "      <td>2.0</td>\n",
        "      <td>56.800</td>\n",
@@ -1616,12 +1599,10 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12975</th>\n",
        "      <td>Whitefield</td>\n",
-       "      <td>2 BHK</td>\n",
        "      <td>850 - 1060</td>\n",
        "      <td>2.0</td>\n",
        "      <td>38.190</td>\n",
@@ -1630,7 +1611,6 @@
        "    <tr>\n",
        "      <th>12990</th>\n",
        "      <td>Talaghattapura</td>\n",
-       "      <td>3 BHK</td>\n",
        "      <td>1804 - 2273</td>\n",
        "      <td>3.0</td>\n",
        "      <td>122.000</td>\n",
@@ -1639,7 +1619,6 @@
        "    <tr>\n",
        "      <th>13059</th>\n",
        "      <td>Harlur</td>\n",
-       "      <td>2 BHK</td>\n",
        "      <td>1200 - 1470</td>\n",
        "      <td>2.0</td>\n",
        "      <td>72.760</td>\n",
@@ -1648,7 +1627,6 @@
        "    <tr>\n",
        "      <th>13265</th>\n",
        "      <td>Hoodi</td>\n",
-       "      <td>2 BHK</td>\n",
        "      <td>1133 - 1384</td>\n",
        "      <td>2.0</td>\n",
        "      <td>59.135</td>\n",
@@ -1657,7 +1635,6 @@
        "    <tr>\n",
        "      <th>13299</th>\n",
        "      <td>Whitefield</td>\n",
-       "      <td>4 BHK</td>\n",
        "      <td>2830 - 2882</td>\n",
        "      <td>5.0</td>\n",
        "      <td>154.500</td>\n",
@@ -1665,27 +1642,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>190 rows × 6 columns</p>\n",
+       "<p>190 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 location   size   total_sqft  bath    price  bedrooms\n",
-       "30              Yelahanka  4 BHK  2100 - 2850   4.0  186.000         4\n",
-       "122                Hebbal  4 BHK  3067 - 8156   4.0  477.000         4\n",
-       "137    8th Phase JP Nagar  2 BHK  1042 - 1105   2.0   54.005         2\n",
-       "165              Sarjapur  2 BHK  1145 - 1340   2.0   43.490         2\n",
-       "188              KR Puram  2 BHK  1015 - 1540   2.0   56.800         2\n",
-       "...                   ...    ...          ...   ...      ...       ...\n",
-       "12975          Whitefield  2 BHK   850 - 1060   2.0   38.190         2\n",
-       "12990      Talaghattapura  3 BHK  1804 - 2273   3.0  122.000         3\n",
-       "13059              Harlur  2 BHK  1200 - 1470   2.0   72.760         2\n",
-       "13265               Hoodi  2 BHK  1133 - 1384   2.0   59.135         2\n",
-       "13299          Whitefield  4 BHK  2830 - 2882   5.0  154.500         4\n",
+       "                 location   total_sqft  bath    price  bedrooms\n",
+       "30              Yelahanka  2100 - 2850   4.0  186.000         4\n",
+       "122                Hebbal  3067 - 8156   4.0  477.000         4\n",
+       "137    8th Phase JP Nagar  1042 - 1105   2.0   54.005         2\n",
+       "165              Sarjapur  1145 - 1340   2.0   43.490         2\n",
+       "188              KR Puram  1015 - 1540   2.0   56.800         2\n",
+       "...                   ...          ...   ...      ...       ...\n",
+       "12975          Whitefield   850 - 1060   2.0   38.190         2\n",
+       "12990      Talaghattapura  1804 - 2273   3.0  122.000         3\n",
+       "13059              Harlur  1200 - 1470   2.0   72.760         2\n",
+       "13265               Hoodi  1133 - 1384   2.0   59.135         2\n",
+       "13299          Whitefield  2830 - 2882   5.0  154.500         4\n",
        "\n",
-       "[190 rows x 6 columns]"
+       "[190 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1705,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-06-30T15:32:25.179114Z",
@@ -1738,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-06-30T15:32:26.431698Z",
@@ -1756,7 +1733,7 @@
        "(5112.0, 5112.0)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1766,8 +1743,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'll create a new dataframe and apply the above function to the total_sqft column."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-06-30T15:32:27.799260Z",
@@ -1782,7 +1766,6 @@
      "data": {
       "text/plain": [
        "location      Yelahanka\n",
-       "size              4 BHK\n",
        "total_sqft       2475.0\n",
        "bath                4.0\n",
        "price             186.0\n",
@@ -1790,17 +1773,16 @@
        "Name: 30, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# I'll create a new dataframe and apply the above function to the total_sqft column.\n",
     "df3 = df2.copy()\n",
     "df3.total_sqft = df3.total_sqft.apply(convertRangeToFloat)\n",
     "\n",
-    "# An entry formerly with a range.\n",
+    "# An entry formerly with a range as total_sqft.\n",
     "df3.loc[30]"
    ]
   },
@@ -1813,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2022-06-30T15:32:35.371586Z",
@@ -1846,7 +1828,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>location</th>\n",
-       "      <th>size</th>\n",
        "      <th>total_sqft</th>\n",
        "      <th>bath</th>\n",
        "      <th>price</th>\n",
@@ -1857,7 +1838,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Electronic City Phase II</td>\n",
-       "      <td>2 BHK</td>\n",
        "      <td>1056.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>39.07</td>\n",
@@ -1866,7 +1846,6 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Chikka Tirupathi</td>\n",
-       "      <td>4 Bedroom</td>\n",
        "      <td>2600.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>120.00</td>\n",
@@ -1875,7 +1854,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Uttarahalli</td>\n",
-       "      <td>3 BHK</td>\n",
        "      <td>1440.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>62.00</td>\n",
@@ -1884,7 +1862,6 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Lingadheeranahalli</td>\n",
-       "      <td>3 BHK</td>\n",
        "      <td>1521.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>95.00</td>\n",
@@ -1893,7 +1870,6 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Kothanur</td>\n",
-       "      <td>2 BHK</td>\n",
        "      <td>1200.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>51.00</td>\n",
@@ -1904,15 +1880,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                   location       size  total_sqft  bath   price  bedrooms\n",
-       "0  Electronic City Phase II      2 BHK      1056.0   2.0   39.07         2\n",
-       "1          Chikka Tirupathi  4 Bedroom      2600.0   5.0  120.00         4\n",
-       "2               Uttarahalli      3 BHK      1440.0   2.0   62.00         3\n",
-       "3        Lingadheeranahalli      3 BHK      1521.0   3.0   95.00         3\n",
-       "4                  Kothanur      2 BHK      1200.0   2.0   51.00         2"
+       "                   location  total_sqft  bath   price  bedrooms\n",
+       "0  Electronic City Phase II      1056.0   2.0   39.07         2\n",
+       "1          Chikka Tirupathi      2600.0   5.0  120.00         4\n",
+       "2               Uttarahalli      1440.0   2.0   62.00         3\n",
+       "3        Lingadheeranahalli      1521.0   3.0   95.00         3\n",
+       "4                  Kothanur      1200.0   2.0   51.00         2"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1932,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1951,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
